fix(frontend): adjusted grid layout for better adaptability on smaller screens

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -71,11 +71,44 @@ body {
 }
 
 .grid-children {
-  grid-column: 2 / 18;
+  grid-column: 2 / 17;
   grid-row: 2 / 11;
-  margin-left: 18px;
-  margin-right: 38px;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  max-width: 1200px;
+}
+
+@media (max-width: 1300px) {
+  .grid-children {
+    grid-column: 2 / 16;
+  }
+}
+
+@media (max-width: 1100px) {
+  .grid-children {
+    grid-column: 3 / 15;
+  }
+}
+
+@media (max-width: 950px) {
+  .grid-children {
+    grid-column: 3 / 14;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-children {
+    grid-column: 3 / 20;
+  }
+}
+
+@media (max-width: 500px) {
+  .grid-children {
+    grid-column: 4 / 20;
+  }
 }
 
 @media (max-width: 600px) {
